<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountSettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_accountsetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <RelativeLayout
                android:id="@+id/Rela_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp">

                <ImageView
                    android:id="@+id/BtnClose"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_close_black_24dp" />

                <ImageView
                    android:id="@+id/BtnSave"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_check_black_24dp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar_layout_accountsetting"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/BtnEditImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/profile" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_profil_picture"
            android:textStyle="italic"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/TxtEditFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/full_name"
            android:inputType="text"/>
        <EditText
            android:id="@+id/TxtEditUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/username"
            android:inputType="text"/>
        <EditText
            android:id="@+id/TxtEditBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/bio"
            android:inputType="text"/>

    </LinearLayout>
    <Button
        android:id="@+id/BtnLogout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/buttons_background"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/log_out"
        android:textColor="@color/colorPrimaryDark"
        android:layout_above="@+id/BtnDeleteAccount"
        android:layout_marginBottom="15dp"
        />
    <Button
        android:id="@+id/BtnDeleteAccount"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/buttons_with_background"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/delete_account"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        />

</RelativeLayout>