<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp"
        android:translationZ="0.1dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp">

                <TextView
                    android:id="@+id/TxtUsernameProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/username"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/Btn_Option_Profile"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/options" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/Scroll_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar_layout_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/Image_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/profile" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/TxtPostCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_100"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/posts"
                            android:textColor="@color/black"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/TxtFollowersCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_100"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:textColor="@color/black"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/TxtFollowingsCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_100"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followings"
                            android:textColor="@color/black"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/TxtFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:maxLines="1"
                android:text="@string/fullname"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TxtBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="5dp"
                android:text="@string/bio_bio_bio_bio_bio_bio_bio_bio_bio"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/BtnEditProfile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/buttons_background"
                android:text="@string/edit_profile"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/BtnGridPostList"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/grid" />

                <ImageButton
                    android:id="@+id/BtnSavedPost"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/save_large_icon" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>